@@ -40,6 +40,9 @@
   * dulwich.pack.write_pack_index_v{1,2} now take a file-like object
     rather than a filename. (Jelmer Vernooij)
 
+  * Make dul-daemon a trivial wrapper around server functionality.
+    (Dave Borowitz)
+
 
 0.6.0	2010-05-22
 
